# Coborg-Platform

./: .bashrc  .gitmodules  README.md  git.txt  pullrequesttest.txt
.voice_subsystem/src/: listen.py
.voice_subsystem_standalone/src/: keywords.txt  listen.py
Motion Demo/: README.md
PerceptionSubsystem/: build_instruction
Previous work/backpack_ROS-gaurav_hand_track/: README.md  installall.sh  makeall.sh
Previous work/modularArmControl-master/: README.md
Previous work/modularArmControl-theBeltClaw/: admittanceTest.m  directionalAdmittanceScratchings.m  holdTest.m  joystickTest.m  moveToInitialPos.asv  positionAdmittance.m  setGainsBeltArm.m  setupBeltArm.m
VoiceSubsystem/: test.py
VoiceSubsystem/model/: coborg-cmudict-en-us.dict  coborg-cmudict-en-us.dict.part.test
VoiceSubsystem/src/: keywords.txt  keywordsnothers.txt  listen.py
archive/backpack_ROS-gaurav_hand_track/: .gitignore  sourceall.sh
archive/backpack_ROS-gaurav_hand_track/src/aruco_detect_ros/: CMakeLists.txt  package.xml
archive/backpack_ROS-gaurav_hand_track/src/aruco_detect_ros/launch/: aruco_intel_finder.launch  aruco_usb_finder.launch
archive/backpack_ROS-gaurav_hand_track/src/aruco_detect_ros/src/: make_kin_utils.py
archive/backpack_ROS-gaurav_hand_track/src/nn_detect_hand/: CMakeLists.txt  package.xml
archive/backpack_ROS-gaurav_hand_track/src/nn_detect_hand/src/: get_intelhand_poses.py  publish_poses.py
archive/backpack_ROS-gaurav_hand_track/src/nn_detect_hand/src/include/: detect_single_threaded.py  egohands_dataset_clean_4classes.py  hand_detection.py  start.sh  wrapper.py
archive/backpack_ROS-gaurav_hand_track/src/nn_detect_hand/src/include/utils/: label_map_util.py
archive/modularArmControl-master/: mainStartup.m
archive/modularArmControl-theBeltClaw/: checkKinematics.m  directionalAdmittance.asv  directionalAdmittance.m  moveToInitialPos.m  setGainsTest.m  testData1.mat
arduino_ws/: readme.md  sensors.ino
arduino_ws/devel/: .catkin  .rosinstall  local_setup.sh
arduino_ws/install/: .rosinstall
arduino_ws/main/: main.ino
catkin_ws/: .gitignore  README.md  actuated_manipulation_system_readme.md  main_state_readme.md  readme.md  rs_d400_and_t265.launch  test.txt  vision_system_readme.md  voice_system_readme.md
catkin_ws/src/goal_getter/: CMakeLists.txt
catkin_ws/src/goal_getter/msg/: goal_msg.msg
catkin_ws/src/goal_getter/src/: .goal_getter.cpp.swp  goal_getter.cpp
demos/perceptionsubsystem/src/goal_getter/: CMakeLists.txt  README.md  package.xml
demos/perceptionsubsystem/src/goal_getter/launch/: goal_getter.launch
demos/perceptionsubsystem/src/goal_getter/msg/: goal_3d.msg
franka_ws/: README.md  franka_DONOTUSE.sh  franka_new_sh.sh  franka_setup.sh  franka_setup_1.sh  franka_startup.sh  franka_startup_2.sh
moveit_ws/: DoF_SVD_Target_Table.ods  actuated_manipulation_system_readme.md  vision_system_readme.md
moveit_ws/src/dof_4_4inchlower_arm/: CMakeLists.txt  package.xml
moveit_ws/src/dof_4_4inchlower_arm/config/: fake_controllers.yaml  kinematics.yaml
moveit_ws/src/dof_4_4inchlower_arm/launch/: default_warehouse_db.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  warehouse.launch
(+1285 files in other folders)
