<?xml version="1.0"?>
<package format="2">
  <name>nn_detect_hand</name>
  <version>0.0.0</version>
  <description>The nn_detect_hand package</description>

  <maintainer email="gauravs123456789@gmail.com">Gaurav Suryawanshi</maintainer>

  <license>TODO</license>

  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
